# Feedback-Management-v2

./: .gitattributes  Dockerfile  README.md  apex-modern.css  docker-compose.yml  entrypoint.sh  main.py  profanity_en.csv  pyproject.toml  requirements.txt  seed.py  ultracurse.py  universal_template.html
app/: __init__.py  models.py  utils.py
app/routes/: admin.py  display.py  public.py
app/static/css/: apex-modern.css  style.css
app/static/js/: app.js  charts.js  slideshow.js
app/templates/: admin.html  admin_login.html  base.html  display.html  display_slideshow.html  edit_question.html  index.html
data/: feedback.db
