[project]
name = "feedback-management-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alt-profanity-check>=1.8.0",
    "eventlet>=0.40.4",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.2.2",
    "qrcode[pil]>=8.2",
]
